<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_mux</name>
  <version>3.1.1</version>
  <description>
      Twist multiplexer, which multiplex several velocity commands (topics) and
      allows to priorize or disable them (locks).
  </description>

  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>

  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>

  <!-- Tests -->
  <!-- <build_depend>rostest</build_depend>
  <test_depend>rospy</test_depend>
  <test_depend>rostopic</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
      <rosindex>
          <tags>
              <tag>control</tag>
              <tag>twist</tag>
              <tag>cmd_vel</tag>
              <tag>multiplex</tag>
              <tag>mux</tag>
          </tags>
      </rosindex>
  </export>
</package>
